--- a/src/components/Sections/ContactPageSection/contactForm.module.css
+++ b/src/components/Sections/ContactPageSection/contactForm.module.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  gap: 3rem;
+
   margin: 10rem auto;
 
   box-shadow: 0 0.2rem 1.8rem 0 rgba(0, 0, 0, 0.3);
