--- a/src/components/Sections/EnergySolutionsSection/components/header.module.css
+++ b/src/components/Sections/EnergySolutionsSection/components/header.module.css
@@ -51,7 +51,8 @@
   text-align: center;
   padding-top: 1.6rem;
   font-style: italic;
-  max-width: 60%;
+  max-width: 120rem;
+  width: 60%;
 }
 
 .moduleHeaderParagraph {
